# cyclicprng

./: .codeclimate.yml  .flake8  Pipfile  README.md  cyclicprng.py  pyproject.toml  setup.py  tests.py  tox.ini
.github/workflows/: publish.yaml
