[project]
name = "cyclicprng"
requires-python = ">=3.8"

[tool.ruff]

[tool.ruff.lint]
ignore = [
  "PLC0414",
  "PLR0911",
  "PLR0912",
  "PLR0915",
  "PLR2004"
]
select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pyflakes
  "F",
  # flynt
  "FLY",
  # isort
  "I",
  # pylint
  "PL",
  # flake8-return
  "RET",
  # Ruff's own rules
  "RUF",
  # flake8-simplify
  "SIM",
  # flake8-tidy-imports
  "TID",
  # pyupgrade
  "UP"
]
